# clipy

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.sh
clipy/: backend.py  cli.py  config.py  database.py  utils.py
scripts/: clipy-dmenu.sh  clipy-fzf.sh  clipy-rofi.sh  clipy-telescope.lua
